<resources>
    <string name="app_name">Project5</string>
    <string name="ru_pizzaria">RU Pizzaria</string>
    <string name="phone_number">Phone Number</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="deluxe">Deluxe</string>
    <string name="hawaiian">Hawaiian</string>
    <string name="store_orders">Store Orders</string>
    <string name="current_order">Current Order</string>
    <string name="todo">TODO</string>
    <string name="chicken">Chicken</string>
    <string name="beef">Beef</string>
    <string name="green_pepper">GreenPepper</string>
    <string name="mushroom">Mushroom</string>
    <string name="pineapple">Pineapple</string>
    <string name="cheese">Cheese</string>
    <string name="sausage">Sausage</string>
    <string name="onion">Onion</string>
    <string name="black_olives">BlackOlives</string>
    <string name="pizza_image">pizza image</string>
    <string name="add_to_order">Add To Order</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="size">Size</string>
    <string name="toppings">Toppings</string>
    <string name="ham">Ham</string>
    <string name="place_order">Place Order</string>
    <string name="remove_pizza">Remove Pizza</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="_0_00">$0.00</string>
    <string name="_1111111111">1111111111</string>
    <string name="remove">Remove</string>
    <string name="store_orders">Store Orders</string>
</resources>