<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="170dp"
        android:text="@string/ru_pizzaria"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/titleTextView"
        app:layout_constraintStart_toStartOf="@+id/titleTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        android:autofillHints="" />

    <TextView
        android:id="@+id/phoneNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <Button
        android:id="@+id/pepperoniButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/pepperoni"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberLabel" />

    <Button
        android:id="@+id/deluxeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/deluxe"
        app:layout_constraintEnd_toEndOf="@+id/pepperoniButton"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/pepperoniButton"
        app:layout_constraintTop_toBottomOf="@+id/pepperoniButton" />

    <Button
        android:id="@+id/hawaiianButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hawaiian"
        app:layout_constraintEnd_toEndOf="@+id/pepperoniButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/pepperoniButton"
        app:layout_constraintTop_toBottomOf="@+id/deluxeButton" />

    <Button
        android:id="@+id/storeOrdersButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/store_orders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/currentOrderButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/current_order"
        app:layout_constraintBottom_toTopOf="@+id/storeOrdersButton"
        app:layout_constraintEnd_toEndOf="@+id/storeOrdersButton"
        app:layout_constraintStart_toStartOf="@+id/storeOrdersButton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/currentOrderButton"
        app:layout_constraintEnd_toEndOf="@+id/currentOrderButton"
        app:layout_constraintStart_toStartOf="@+id/currentOrderButton"
        app:layout_constraintTop_toBottomOf="@+id/hawaiianButton"
        app:srcCompat="@drawable/pizza_knight"
        android:contentDescription="@string/todo" />
</androidx.constraintlayout.widget.ConstraintLayout>